# local_examples

./: CMakeLists.txt  README.md  package.xml  rotate_quaternion.py
include/local_examples/: gaze_controller.h  manipulation_planner_node.h
src/: atlas_demo.cpp  drill_grasp.cpp  gaze_controller.cpp  hand_command_publisher.cpp  manipulation_node.cpp  manipulation_planner_node.cpp  rotate_quaternion.py  test_com.cpp  test_ihmc_msgs.cpp  trial_manipulation_node.cpp  walk_2d_pose_goal_example.cpp
